# virgil-cli

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.experiment  LICENSE.md  PLAN-CODE-GRAPH.md  PLAN-SERVE-MODE.md  README.md  RELEASING.md  SECURITY.md  bench-results-cozo.csv  bench-results-duckdb.csv  build.rs  install.ps1  install.sh  upload-to-s3.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/proposals/: cozodb-migration.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.scratch/cozodb-migration/: 01-bounded-channel.md  02-cozo-schema-write-path.md  03-cfg-fact-builder.md  04-metric-facts.md  05-query-interface.md  06-the-deletion.md  07-rocksdb-persistence.md  08-incremental-refresh.md  09-drop-petgraph.md  10-graph-algo-templates.md  MIGRATION-COMPLETE.md
.virgil-skill/: plan.md
audit_plans/: c_tech_debt.md  cpp_tech_debt.md  csharp_tech_debt.md  go_tech_debt.md  java_tech_debt.md  javascript_tech_debt.md  php_tech_debt.md  python_tech_debt.md  rust_tech_debt.md  typescript_tech_debt.md
benchmarks/: benchmark.config.json  benchmark.config.schema.json  opencode.baseline.json  package.json
benchmarks/src/: config.ts  index.ts  issues.ts  metrics.ts  prerequisites.ts  prompts.ts  repo.ts  report.ts  runner.ts  scorer.ts  session.ts  types.ts
docs/: attrs-c.md  attrs-cpp.md  attrs-csharp.md  attrs-go.md  attrs-java.md  attrs-php.md  attrs-python.md  attrs-rust.md  attrs-typescript.md  contract-review.md  contract-template.md  datalog-documentation.md  dsl.md  references-c.md  references-cpp.md  references-csharp.md  references-go.md  references-java.md  references-php.md  references-python.md  references-rust.md  references-typescript.md  resolution.md  types-c.md  types-cpp.md  types-csharp.md  types-go.md  types-java.md  types-php.md  types-python.md  types-rust.md  types-typescript.md  virgil-datalog-schema.md
docs/adr/: 0001-wholesale-schema-swap-to-datalog-model.md  0002-symbol-id-scheme.md  0003-level-3-types-and-references.md  0004-templates-dark-during-migration.md  0005-datalog-resolution.md
docs/experiments/: duckdb-swap-findings.md  duckdb-swap.md
docs/issues/: 001-schema-swap-foundation.md  002-rust-extractor-baseline.md  003-typescript-extractor-baseline.md  004-python-extractor-baseline.md  005-go-extractor-baseline.md  006-java-extractor-baseline.md  007-php-extractor-baseline.md  008-c-extractor-baseline.md  009-cpp-extractor-baseline.md  010-csharp-extractor-baseline.md  011-parameter-local-symbol-extraction.md  012-symbol-metadata-expansion.md  (+7 more)
examples/: bench_diff.sh  bench_grammars.rs  bench_matrix.sh  bench_query_optimisations.md  bench_query_optimisations.sh  bench_tree_sitter.rs  bench_tree_sitter_pool.rs  bench_workspace.rs  noop.cozoql  test_to_function_map.baseline.cozoql  test_to_function_map.optimised.cozoql
scripts/: migrate_metrics.py  migrate_taint.py
skill/: call-graph-reachability.md  data-entry-points.md  dead-code.md  directory-coupling.md  feature-clusters.md  internal-vs-external-deps.md  longest-data-paths.md  loop-nesting-bigo.md  references-ranking.md
src/: antipatterns.rs  audit.rs  call_graph.rs  classify.rs  cli.rs  complexity.rs  discovery.rs  format.rs  language.rs  lib.rs  main.rs  models.rs  output.rs  parser.rs  project.rs  query_engine.rs  query_lang.rs  registry.rs  s3.rs  security.rs  server.rs  signature.rs  symbols.rs  workspace.rs
tests/: audit_json_integration.rs  integration_call_edge.rs  integration_test.rs  resolution.rs  snapshot_attrs.rs  snapshot_baselines.rs  snapshot_locals.rs  snapshot_references.rs  snapshot_rust.rs  snapshot_symbol_metadata.rs  snapshot_types_and_hierarchy.rs
(+1362 files in other folders)
