[package]
name = "virgil-cli"
version = "0.1.4"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ignore = "0.4"
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-php = "0.24"
arrow = { version = "54", default-features = false, features = ["prettyprint"] }
parquet = { version = "54", default-features = false, features = ["arrow"] }
rayon = "1.11"
streaming-iterator = "0.1"
duckdb = { version = "1.4", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-s3 = { version = "0.37", default-features = false, features = ["sync-native-tls"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
opt-level = 3
codegen-units = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/release/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/release/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"
