[package]
name = "virgil-cli"
version = "0.6.4"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ignore = "0.4"
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-php = "0.24"
rayon = "1.11"
streaming-iterator = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.18"
globset = "0.4"
dirs = "5"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
include_dir = "0.7"
lru = "0.12"
lasso = { version = "0.7", features = ["multi-threaded"] }
# DuckDB backend (formerly Cozo — replaced as the fact store, see
# docs/experiments/duckdb-swap.md). Bundled so we don't depend on a
# system DuckDB. vtab-arrow + appender-arrow give us the Arrow ingest
# path; duckpgq is loaded at runtime from the community repo on first
# cold-build and cached under ~/.duckdb/extensions/.
duckdb = { version = "1", features = ["bundled", "vtab-arrow", "appender-arrow"] }
arrow = "53"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-indicatif = "0.3"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
opt-level = 3
codegen-units = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/release/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/release/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"
